# test1

./: a.out  en7.c  func.c  func.h  main.c  test-1  test.C
.github/workflows/: test.yml
CPP/演習1/: a.out  en01.cpp
CPP/演習10/: a.out  en10.cpp
CPP/演習11/: en11.cpp
CPP/演習12/: a.out  en12.cpp
CPP/演習13/: a.out  en13.cpp
CPP/演習14/: a.out  en14.cpp
CPP/演習15/: a.out
CPP/演習16/: a.out  en16.cpp
CPP/演習17/: a.out  en17.cpp
CPP/演習18/: a.out  en18.cpp
CPP/演習19/: a.out  en19.cpp
CPP/演習2/: a.out  en02.cpp
CPP/演習20/: a.out  en20.cpp
CPP/演習21/: a.out  en21.cpp
CPP/演習22/: a.out  en22.cpp
CPP/演習23/: a.out  en23.cpp
CPP/演習24/: a.out  en24.cpp
CPP/演習25/: a.out  en25.cpp
CPP/演習26/: a.out  en26.cpp
CPP/演習27/: a.out  en27.cpp
CPP/演習28/: a.out  en28.cpp
CPP/演習29/: a.out  en29.cpp
CPP/演習3/: a.out  en03.cpp
CPP/演習30/: a.out  en30.cpp
CPP/演習31/: a.out  en31.cpp
CPP/演習32/: a.out  en32.cpp
CPP/演習33/: a.out  en33.cpp
CPP/演習34/: a.out  en34.cpp
CPP/演習4/: a.out  en04.cpp
CPP/演習5/: a.out  en05.cpp
CPP/演習6/: a.out  en06.cpp
CPP/演習7/: en07.cpp
CPP/演習8/: a.out  en08.cpp
CPP/演習9/: a.out  en09.cpp
src/: test.h
演習13/: .gitignore  CMakeLists.txt
演習13/src/: test.c  test.h
演習15/: a.out  en15.c
演習16/: a.out  en16.c
演習17/: a.out  en17.c
演習18/: a.out  en18.c
演習19/: a.out  en19.c
演習2/: en2.c
演習3/: en3.c
演習4/: en4.c
演習5/: en5.c
演習6/: en6.c
演習8/: en8.c
演習9&10/: func.h
演習１/: en1.C
演習１３/src/: test.c
演習３/: en3.c
演習５/: en5.c
演習６/: en6.c
演習７/: en7-1.c  en7-2.c  en7-3.c
演習８/: en8.c
演習９＆１０/: func.c
(+13 files in other folders)
